<resources>
    <string name="app_name">IA07</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="color">Color</string>
    <string name="clear">Clear</string>
    <string name="lrg" > Large </string>
    <string name="med" > Medium </string>
    <string name="sml" > Small </string>
    <string name="paint">Paint</string>
    <string name="load">Load</string>
    <string name="trace">Trace</string>
    <string name="tracing_image">TracingImage</string>
    <string name="stop_trace">Stop Tracing</string>
    <string name="brush_size">Brush Size</string>
</resources>
