<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.umd.cmsc434.ia07.Doodle">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#888"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/options_layout">

            <Button
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:id="@+id/clear_btn"
                android:layout_gravity="center_horizontal"
                />

            <Button
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/save_btn" />

            <Button
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load"
                android:id="@+id/load_btn" />

            <ToggleButton
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/trace"
                android:textOn="@string/stop_trace"
                android:id="@+id/trace_btn" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_view"
                android:contentDescription="@string/tracing_image"
                android:layout_centerInParent="true" />

            <edu.umd.cmsc434.ia07.DrawingView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/canvas_view"
                android:background="#fff" >
            </edu.umd.cmsc434.ia07.DrawingView>

            <ImageButton
                android:id="@+id/color_btn"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/color"
                android:src="@drawable/swatch"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/margin_space"
                android:layout_marginTop="@dimen/margin_space" />

            <Button
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/brush_btn"
                android:text="@string/brush"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_space"
                android:layout_marginTop="@dimen/margin_space"
                />

            <ToggleButton
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/erase"
                android:textOn="@string/paint"
                android:id="@+id/erase_btn"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/margin_space"
                android:layout_marginBottom="@dimen/margin_space"
                />


        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
